# pygen

./: .gitignore  INSTALL.md  README.md  TASK.md  VERIFICATION.md  cspell.json  taplo.toml
.github/workflows/: ci.yml  release.yml
docs/: PYTHON-FASTAPI-SPEC.md  PYTHON-LIBRARY-SPEC.md  PYTHON-PROJECT-SPEC.md  PYTHON-STREAMLIT-SPEC.md
fastapi/: .env.example  .gitignore  .markdownlint-cli2.yaml  Dockerfile  Makefile  README.md  TEMPLATE.md  cspell.json  docker-compose.yml  pyproject.toml
fastapi/.devcontainer/: devcontainer.json
fastapi/postman/: collection.json  environment.json
fastapi/src/project_name/: cli.py  dependencies.py  main.py
fastapi/src/project_name/core/: __init__.py  config.py
fastapi/src/project_name/routers/: __init__.py  health.py  items.py  users.py
fastapi/src/project_name/schemas/: __init__.py  item.py  user.py
fastapi/src/project_name/services/: __init__.py  item_service.py  user_service.py
fastapi/src/project_name_domain/: __init__.py
fastapi/src/project_name_domain/core/: config.py
fastapi/tests/: conftest.py
fastapi/tests/integration/: test_health.py  test_items.py  test_users.py
fastapi/tests/unit/: test_dependencies.py  test_services.py
plain/: .gitignore  Makefile  README.md  TEMPLATE.md  cspell.json  pyproject.toml
plain/src/project_name/: __main__.py
plain/src/project_name/utils/: __init__.py  helpers.py
plain/tests/unit/: test_helpers.py  test_main.py
streamlit/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TEMPLATE.md  cspell.json  docker-compose.yml  pyproject.toml
streamlit/.devcontainer/: Dockerfile
streamlit/.streamlit/: config.toml  secrets.toml.example
streamlit/src/project_name/: __main__.py  app.py
streamlit/src/project_name/components/: charts.py  forms.py  sidebar.py
streamlit/src/project_name/pages/: dashboard.py  home.py  settings.py
streamlit/src/project_name/services/: api_client.py  data_service.py
streamlit/src/project_name/utils/: cache.py  state.py
streamlit/tests/integration/: test_app_smoke.py
streamlit/tests/unit/: test_cache.py  test_components.py  test_pages.py  test_services.py  test_state.py
